jumped heading fix

--- a/static/css/mlc.css
+++ b/static/css/mlc.css
@@ -254,6 +254,7 @@ ul.no-style-list{
 	align-items: flex-start;
 	margin: 0;
 }
+.search-results-page .search-results-series-title h2,
 .search-results-page .search-results-series-title h3{
 	flex-grow: 1;
 	margin-top: 0;
@@ -283,6 +284,9 @@ ul.no-style-list{
 	border-bottom: 1px dashed #ddd;
 	padding: 0 .5rem .3rem .5rem;
 	flex-basis: 100% !important;
+}
+.object-metadata dd:after{
+	content:'\00000a';
 }
 
 @media (min-width:420px){
